Fix spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -314,6 +314,7 @@ img {
     background-color: #33adff;
     border: none;
     position: relative;
+    margin-top: 3.2em;
     padding: 12px;
 }
 
